Issue 13270: Project webpart: long project names cause misalignment Issue 13263: **List of project types appears out of alphabetical order in Chrome

--- a/internal/webapp/extWidgets/IconPanel.css
+++ b/internal/webapp/extWidgets/IconPanel.css
@@ -2,6 +2,7 @@
 	padding: 5px;
     text-align: center;
     vertical-align:text-top;
+    word-wrap: break-word;
 }
 
 .labkey-iconpanel .thumb-wrap-bottom{
